--- a/manifest.json
+++ b/manifest.json
@@ -3,16 +3,6 @@
   "version": "1.0",
   "description": "Build an Extension!",
   "manifest_version": 2,
-  "browser_action":
-  {
-    "default_popup": "index.html"
-  },
-  "content_scripts":
-   [
-     {
-      "matches": ["<all_urls>"],
-      "js": ["script.js"],
-      "run_at": "document_end"
-      }
-   ]
-  }
+  "browser_action": {"default_popup": "index.html"},
+  "content_scripts":[{"matches":["<all_urls>"], "css":["fix.css"], "js": ["script.js"],"run_at": "document_end"}]
+}
